[project]
name = "async-dag"
version = "0.1.0"
description = "Asyncio-first DAG pipeline toolkit with queue-based streaming and multiprocess runners"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
